--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,10 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.coding</groupId>
+            <artifactId>common</artifactId>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
