--- a/pom.xml
+++ b/pom.xml
@@ -15,14 +15,14 @@
 
     <properties>
         <java.version>1.8</java.version>
-        <spring-boot.version>2.1.7.RELEASE</spring-boot.version>
-        <spring-cloud-alibaba.version>2.1.2.RELEASE</spring-cloud-alibaba.version>
-        <spring-cloud.version>Greenwich.SR5</spring-cloud.version>
+        <spring-boot.version>2.3.2.RELEASE</spring-boot.version>
+        <spring-cloud-alibaba.version>2.2.3.RELEASE</spring-cloud-alibaba.version>
+        <spring-cloud.version>Hoxton.SR8</spring-cloud.version>
         <dockerfile-plugin.version>1.4.10</dockerfile-plugin.version>
         <grpc-starter.version>2.10.1.RELEASE</grpc-starter.version>
         <guangee-starter.version>1.3</guangee-starter.version>
         <retrofit-starter.version>2.2.2</retrofit-starter.version>
-        <knife4j.version>2.0.4</knife4j.version>
+        <knife4j.version>2.0.8</knife4j.version>
     </properties>
 
     <dependencies>
