--- a/example/src/main/resources/application.yml
+++ b/example/src/main/resources/application.yml
@@ -7,8 +7,13 @@ guanweiming:
     bucket: 1
     secret-key: 1
     url: 1
+  weblog:
+    enabled: true
 proxy:
   client-key: 6a500c3294fe4dd7b18440b65fada93d
   server-port: 4900
   server-host: coding-space.cn
   ssl-enable: false
+grpc:
+  server:
+    port: 0
