--- a/pom.xml
+++ b/pom.xml
@@ -13,14 +13,14 @@
     <artifactId>parent</artifactId>
     <version>1.0</version>
     <name>parent</name>
-    <description>Demo project for Spring Boot</description>
+    <description>我的SpringCloud</description>
 
     <properties>
         <java.version>1.8</java.version>
         <spring-boot.version>2.3.3.RELEASE</spring-boot.version>
-        <spring-cloud-alibaba.version>2.2.3.RELEASE</spring-cloud-alibaba.version>
-        <spring-cloud.version>Hoxton.SR8</spring-cloud.version>
-        <dockerfile-plugin.version>1.4.10</dockerfile-plugin.version>
+        <spring-cloud-alibaba.version>2.2.6.RELEASE</spring-cloud-alibaba.version>
+        <spring-cloud.version>Hoxton.SR9</spring-cloud.version>
+        <dockerfile-plugin.version>1.4.13</dockerfile-plugin.version>
         <grpc-starter.version>2.10.1.RELEASE</grpc-starter.version>
         <guangee-starter.version>1.3</guangee-starter.version>
         <retrofit-starter.version>2.2.2</retrofit-starter.version>
