--- a/example/src/main/resources/application.yml
+++ b/example/src/main/resources/application.yml
@@ -12,3 +12,7 @@ proxy:
   server-port: 4900
   server-host: coding-space.cn
   ssl-enable: false
+springfox:
+  documentation:
+    swagger-ui:
+      base-url: /doc
