--- a/common/pom.xml
+++ b/common/pom.xml
@@ -148,6 +148,11 @@
         <!--            <groupId>net.devh</groupId>-->
         <!--            <artifactId>grpc-spring-boot-starter</artifactId>-->
         <!--        </dependency>-->
-
+        <!--logback.groovy-->
+        <dependency>
+            <groupId>org.codehaus.groovy</groupId>
+            <artifactId>groovy</artifactId>
+            <version>3.0.9</version>
+        </dependency>
     </dependencies>
 </project>
